# gpu-delaunay-generator-2.5D

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.py
app/: .clang-format  CMakeLists.txt  main.cpp
app/inc/: CommonTypes.h  DelaunayChecker.h  HashTable.h  InputCreator.h  PointType.h  RandGen.h  json.h
app/inc/CPU/: PredWrapper.h
app/inc/GPU/: DPredWrapper.h  GpuDelaunay.h  HostToKernel.h  KerDivision.h  KerPredWrapper.h  KerPredicates.h  MemoryManager.h  SmallCounters.h  ThrustWrapper.h
app/src/: DelaunayChecker.cpp  HashTable.cpp  InputCreator.cpp  RandGen.cpp
app/src/CPU/: PredWrapper.cpp  predicates.cpp
app/src/GPU/: GpuDelaunay.cu  KerDivision.cu  KerPredicates.cu  SmallCounters.cu  ThrustWrapper.cu
conf/: config.yaml
example/: CMakeLists.txt  example.cpp
example/gpu-delaunay-generator/: CMakeLists.txt  gpu-delaunay-generator.h
example/gpu-delaunay-generator/include/: IOType.h
example/gpu-delaunay-generator/include/CPU/: PredWrapper.h
example/gpu-delaunay-generator/include/GPU/: KerShewchuk.h
example/gpu-delaunay-generator/src/: DelaunayChecker.cpp  IOType.cpp
gpu-delaunay-generator/: CMakeLists.txt  gpu-delaunay-generator-config.cmake.in  gpu-delaunay-generator.h  gpu-delaunay-generator.pc.in
gpu-delaunay-generator/inc/: CommonTypes.h  HashFunctors.h  IOType.h  PerfTimer.h
gpu-delaunay-generator/inc/CPU/: PredWrapper.h
gpu-delaunay-generator/inc/GPU/: CudaWrapper.h  DPredWrapper.h  GpuDelaunay.h  HostToKernel.h  KerCommon.h  KerDivision.h  KerShewchuk.h  MemoryManager.h
gpu-delaunay-generator/include/: CommonTypes.h  DelaunayChecker.h  HashFunctors.h  IOType.h  PerfTimer.h
gpu-delaunay-generator/include/GPU/: CudaWrapper.h  DPredWrapper.h  GpuDelaunay.h  HostToKernel.h  KerCommon.h  KerDivision.h  KerPredWrapper.h  KerPredicates.h  MemoryManager.h  SmallCounters.h  ThrustWrapper.h
gpu-delaunay-generator/src/: DelaunayChecker.cpp  IOType.cpp
gpu-delaunay-generator/src/CPU/: PredWrapper.cpp  predicates.cpp
gpu-delaunay-generator/src/GPU/: DPredWrapper.cu  GpuDelaunay.cu  KerDivision.cu  KerPredicates.cu  KerShewchuk.cu  SmallCounters.cu  ThrustWrapper.cu
inc/: CommonTypes.h  DelaunayChecker.h  HashFunctors.h  HashTable.h  IOType.h  InputCreator.h  InputGenerator.h  PerfTimer.h  PointType.h  RandGen.h  TriangulationHandler.h  json.h
inc/CPU/: PredWrapper.h
inc/GPU/: CudaWrapper.h  DPredWrapper.h  GpuDelaunay.h  HostToKernel.h  KerCommon.h  KerDivision.h  KerPredWrapper.h  KerPredicates.h  KerShewchuk.h  MemoryManager.h  SmallCounters.h  ThrustWrapper.h
outputs/2023-02-15/00-13-01/.hydra/: hydra.yaml
outputs/2023-02-15/00-19-18/.hydra/: hydra.yaml
outputs/2023-02-15/00-20-51/.hydra/: config.yaml  hydra.yaml
outputs/2023-02-15/00-21-18/.hydra/: hydra.yaml
outputs/2023-02-15/00-21-38/.hydra/: hydra.yaml
src/: DelaunayChecker.cpp  DelaunayChecker.h  HashTable.cpp  IOType.cpp  InputCreator.cpp  InputGenerator.cpp  Main.cpp  RandGen.cpp  TriangulationHandler.cpp  json.hpp
src/CPU/: PredWrapper.cpp  predicates.cpp
src/GPU/: GpuDelaunay.cu  KerDivision.cu  KerPredicates.cu  SmallCounters.cu  ThrustWrapper.cu
src/gDel2D/: CommonTypes.h  GpuDelaunay.h
src/gDel2D/GPU/: CudaWrapper.h  GpuDelaunay.cu  HostToKernel.h  KerCommon.h  KerDivision.cu  KerPredicates.cu  MemoryManager.h
